ipt.rules
# Generated by iptables-save v1.4.21
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p icmp -m comment --comment "accept all ICMP" -j ACCEPT
-A INPUT -i lo -m comment --comment "accept all to lo interface" -j ACCEPT
-A INPUT -m comment --comment "accept related established rules" -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 1.1.1.1/32 -m comment --comment "accept trustable IP" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -m comment --comment "allow default tcp ports" -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN SYN -m comment --comment "drop tcp flags" -j DROP
-A INPUT -p tcp -m tcp --tcp-flags RST ACK -m comment --comment "drop tcp flags" -j DROP
-A INPUT -m comment --comment "drop all" -j DROP
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -s 2.2.2.2/32 -d 3.3.3.3/32 -p tcp -m multiport --dports 8080 -m comment --comment "dnat a port in lan to wan" -j DNAT --to-destination 10.0.0.1:80
# SNAT the servers in LAN to Internet via public IP
-A POSTROUTING -j SNAT --to-source 3.3.3.3
COMMIT
